# few-jax-explore

./: README.md  pyproject.toml
amps-prep/: prep.py
radial/: amplitude.py  fourier-modes.ipynb  test-amp.ipynb  test-bicub.ipynb  test-traj.ipynb  test-waveform.ipynb  trajectory.py  waveform.py
radial/high-ecc-schw/: amplitude_mag_phase.h5  fluxes-unnorm.h5  fluxes.h5  fluxes_nan.h5  load_data.ipynb
sandbox/: spline-solver.ipynb  test-traj.ipynb  test-waveform.ipynb
src/fewjaxexplore/: waveform.py
src/fewjaxexplore/summation/: interpolatedsum.py
src/fewjaxexplore/trajectory/: mappings.py  ode.py  spline.py  utils.py
src/fewjaxstudy/: constants.py  waveform.py
src/fewjaxstudy/amplitude/: ampinterp.py  mappings.py  ylm.py
src/fewjaxstudy/summation/: interpolatedsum.py  spline.py
src/fewjaxstudy/trajectory/: mappings.py  ode.py  utils.py
