[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fewjaxexplore"
description = "testing"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Christian Chapman-Bird" }]
dependencies = [
    "jax",
    "optimistix",
    "lineax",
    "diffrax",
    "lisaconstants",
]
dynamic = [
    "version"
]